The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2005/02/25 15:00:00 CST
Tag: Release_110_53
Description:

New working version (110.53).  NEW BOOTFILES!

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2005/02/25 14:50:00 CST
Tag: blume-20050225-susp
Description:

Brought back SMLofNJ.Susp.  The underlying suspension type is the one
implemented in Core -- which means that it is the same as the one used
by the lazy extension.

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2005/02/24 16:50:00 CST
Tag: blume-20050224-cml-atom
Description:

Simpler and at the same time more general implementation of structure
Atom in CML.

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2005/02/15 17:35:00 CST
Tag: blume-20050215-tools
Description:

Created new "tools" directory under "src" and moved "TraceDebugProf"
there.

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2005/02/10 17:55:00 CST
Tag: blume-20050210-longlong
Description:

Implemented "long long" arguments and results for NLFFI.  (Only the
PPC/MacOS implementation is complete, the other backends still need to
be updated.)

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2005/01/24 17:40:00 CST
Tag: blume-20050124-mlyacc
Description:

Minor cleanup in ML-Yacc rule printing mechanism.  This should fix a